--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "npm run format && npm run lint && npm run test:unit",
     "test:unit": "jest",
     "format": "prettier --write --list-different './src/**/*.js'",
-    "lint": "eslint './src/**/*.js'"
+    "lint": "eslint './src/**/*.js'",
+    "release": "release-it"
   },
   "main": "src/Animated.js",
   "types": "react-native-reanimated.d.ts",
@@ -71,6 +72,16 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
+    }
+  },
+  "release-it": {
+    "hooks": {
+      "after:bump": [
+        "exit 1"
+      ]
+    },
+    "git": {
+      "requireCommits": false
     }
   }
 }
